@@ -40,8 +40,6 @@ Features & Interface
 * SQLBuilder Joins handle SQLExpression tables (not just str/SQLObject/Alias)
   and properly sqlrepr.
 
-* SQLBuilder tablesUsedDict handles sqlrepr'able objects.
-
 * Added SQLBuilder ImportProxy. It allows one to ignore the circular import
   issues with referring to SQLObject classes in other files - it uses the
   classregistry as the string class names for FK/Joins do, but specifically
@@ -79,6 +77,11 @@ Features & Interface
 
 * MySQLConnection (and DB URI) accept a number of SSL-related parameters:
   ssl_key, ssl_cert, ssl_ca, ssl_capath.
+
+* Use sets instead of dicts in tablesUsed. Dropped tablesUsedDict function;
+  instead there is tablesUsedSet that returns a set of strings.
+
+* SQLBuilder tablesUsedSet handles sqlrepr'able objects.
 
 SQLObject 0.9.4
 ===============
